data/all_generated_tests/raw_wast_tests/br_table_UnreachableCodeExecution_2131.wast
;; 1. **Test with Incorrect Label Arity:**    - Description: Create a test where a `br_table` instruction references multiple labels of varying operand stack types and lengths.    - Constraint Checked: Consistent arity validation across all branch labels.    - Relates to Unreachable Code Execution: If `br_table` branches to a label with mismatched arity incorrectly, it may cause the incorrect stack configuration and lead to unintended execution of the `unreachable` instruction.

(assert_invalid
  (module
    (func $incorrect-label-arity
      (block (result i32)
        (block (result i32) (br_table 0 1 (i32.const 1))) 
        (br 1))
      (i32.const 0)
    )
  )
  "type mismatch"
)